added the picture, how to make and ingredients.

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Chicken></h1>    
+    <h1>Chicken And Why It's The Best Dish</h1>    
+    <img src="./chicken-drumsticks.jpg" alt="Chicken Drumstick Picture" height="500" width="850">
+    <h2>This is what chicken drumsticks look like, they are delicious
+</h2> <h4>
+    <p> So to make such a chicken like this, you must have a chicken, then you must either fry  or cook the chicken in an oven. After the chicken is completely cooked you must retain the bone inside so it's an drumstick and 
+    <p> not just a normal chicken breast. After you have make the chicken you also need to make sure you can sepearate all the drumsticks apart so the chicken isn't all together. (unless you plan to eat the entire chicken together)
+    <p> This will be my final paragraph and all that's really left for my amazing dish is the fact you need a good piece of chicken and a little bit of seasoning to make it amazing. Just don't overcook the chicken because ew ;) 
+
+<h2>Ingredients </h2>   
+    <ul>
+    <li>Chicken</li>
+    <li> Seasoning</li>
+    <li> Love</li>
+    <li> Cooking skills help too</li>
+</ul> </h4>
 </body>
 </html>
