Added steps to create it and finished for now.

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CHICKENNNNNNNNN</title>
 </head>
 <body>
     <h1>Chicken And Why It's The Best Dish</h1>    
@@ -20,6 +20,15 @@
     <li> Seasoning</li>
     <li> Love</li>
     <li> Cooking skills help too</li>
-</ul> </h4>
+</ul>
+<h2> Steps To Create The Perfect Chicken Drumsticks</h2>
+    <ol> 
+    <li>First cook the chicken </li>
+    <li>After cooked, place on a plate </li>
+    <li>After on the plate, grab the chicken </li>
+    <li>After grabbing the chicken, bring it towards your mouth </li>
+    <li>Open up and devour that amazing chicken </li>
+    <li>MMMMMMM YUMMY </li>    
+</ol> </h4>
 </body>
 </html>
