--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Website</title>
 </head>
 <body>
 <h1> Odin Recipes</h1>    
-<a href="recipes/chicken.html">chicken</a>
+    <ul>
+    <li> <a href="recipes/chicken.html">chicken</a> </li>
+    <li> <a href="recipes/potatoes.html">potatoes</a> </li>
+    <li> <a href="recipes/cereal.html">cereal</a> </li>
+</ul>
 </body>
 </html>
